# mzds01-ble

./: README.md  classes.py  codes.py  gui.css  gui.py  logger.py  main.py  main_new.py  notification_handler.py  pyproject.toml  textualgui.py
application/: controller.py  gui.py  main.py  utils.py
