[tool.poetry]
name = "mzds01"
version = "0.1.0"
description = ""
authors = ["Dyllon <dyllon.g@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bleak = "^0.19.5"
pylint = "^2.16.3"
rich = "^13.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
